...
        corners: [[0, 60, 120, 180, 240, 300]],
        slots: [([30, 90, 150, 210, 270, 330], 0)],
        neighborDist: 3.0.squareRoot() * tileSize
    )

    public static let triangle = Shape(
        id: .triangle, label: "Triangle",
        corners: [
            [270, 30, 150],  // 0 = pointing up
            [90, 210, 330],  // 1 = pointing down
        ],
        slots: [([90, 210, 330], 1), ([270, 30, 150], 0)],
        neighborDist: tileSize
...
